# game-attribution-agent

./: .dockerignore  .env.example  .gitignore  00-story.html  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
deck/: .gitignore  README.md  index.html  package-lock.json  package.json
deck/theme/: gaa.css
deck/tools/: capture.mjs  pdf.mjs
docs/: Product Brief - DataBase Agent.md  demo-script.md  notion-connect.md  submission-form.md  technical-design.md
docs/spikes/: 2026-06-16-openclaw-tools-reload.md  notion-api-shapes.md
docs/superpowers/: project-story.html
frontend/: .env.example  CLONE.md  E2E.md  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts
frontend/app/: layout.tsx
frontend/lib/: constants.ts
openclaw/: AGENTS.md  MEMORY.md  SOUL.md
plans/: openclaw_agents_soul_security_plan.md
scripts/: build_benchmark_snapshot.py  entrypoint.sh  openclaw_bootstrap.py  openclaw_install.py
spikes/: spike1_maas_toolcall.py
src/gaa/: admin_actions.py  confidence.py  config.py  engine.py  graph.py  lab.py  memory.py  persist.py  tools_registry.py
tests/: test_admin_actions.py  test_confidence.py  test_config.py  test_engine.py  test_engine_full.py  test_engine_gate.py  test_gaa_config.py  test_graph.py  test_graph_admin.py  test_graph_onboarding.py  test_lab.py  test_memory.py  test_openclaw_install.py  test_persist.py  test_tools_registry.py
tests/adapters/: test_csv_adapter.py  test_plan_adapter.py  test_roblox_adapter.py
tests/analytics/: test_adtributor.py  test_aggregate.py  test_causal.py  test_changepoint.py
tests/appstore/: test_search.py
tests/cli/: test_cli.py  test_config_cmd.py  test_doctor.py  test_drilldown_e2e.py  test_extensions_cmd.py  test_lab_tool_e2e.py  (+6 more)
workspace/: AGENTS.md
(+356 files in other folders)
