[project]
name = "gaa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=1.1.0,<2.0.0",
    "python-dotenv",
    "pandas==2.*",
    "duckdb==1.*",
    "pyarrow==17.*",
    "statsmodels==0.14.*",
    "ruptures==1.1.*",
    "plotly==5.*",
    "jinja2==3.*",
    "tomli-w>=1.0",
    "httpx>=0.28.1,<1",
    "beautifulsoup4==4.*",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "boto3>=1.34,<2",
    "mcp>=1.27",
    "jsonschema>=4.0",
]

[project.scripts]
gaa = "gaa.cli.main:cli_entry"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaa = ["core/render/templates/*", "data/seed/*.json", "data/seed/*.md", "data/sample/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
